Applied OOP and Improved The Project

--- a/Index.html
+++ b/Index.html
@@ -120,14 +120,8 @@
       </ul>
 
       <p class="copyright">
-        &copy; Copyright by
-        <a
-          class="twitter-link"
-          target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own.
+        <a class="twitter-link" target="_blank"></a>
+        Made this while learning JavaScript course by Jonas Schmedtmann.
       </p>
     </div>
 
